--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <!-- Today -->
                 <section>
                     <p class="title"><span>&#9660</span><strong>Today</strong></p>
-                    <p><span class="check"></span>Recruiting blog post <span class="editorial"></span> </p>
-                    <p><span class="check"></span>Mobile app launch <span class="q1-goals"></span> </p>
-                    <p><span class="cross"></span>Interview John H. <span class="recruiting"></span> </p>
-                    <p><span class="check"></span>Summit update to mobile storefronts <span class="mobile"></span> </p>
+                    <p><span class="check"></span>Recruiting blog post <span class="etiquette">Editorial</span> </p>
+                    <p><span class="check"></span>Mobile app launch <span class="etiquette" id="purple">Q1 goals</span> </p>
+                    <p><span class="cross"></span>Interview John H. <span class="etiquette" id="marine">Recruiting</span> </p>
+                    <p><span class="check"></span>Summit update to mobile storefronts <span class="etiquette" id="orange">Mobile</span> </p>
                 </section>
 
                 <!-- /Today -->
@@ -48,9 +48,9 @@
                 <section>
                     <p class="title"><span>&#9660</span><strong>Upcoming</strong></p>
                     <p><span class="cross"></span> Schedule meeting with Alex</p>
-                    <p><span class="check"></span>Homepage refresh <span class="website"></span> </p>
-                    <p><span class="cross"></span>Onboard new Sales team members <span class="sales"></span> </p>
-                    <p><span class="check"></span>Review editorial calendar <span class="editorial"></span> </p>
+                    <p><span class="check"></span>Homepage refresh <span class="etiquettete">Website</span> </p>
+                    <p><span class="cross"></span>Onboard new Sales team members <span class="etiquette" id="pink">Sales</span> </p>
+                    <p><span class="check"></span>Review editorial calendar <span class="etiquette" id="green">Editorial</span> </p>
                 </section>
 
                 <!-- /Upcoming -->
